[project]
name = "diavgeia"
version = "0.1.0"
description = "A set of scripts to fetch, backup and mirror diavgeia.gov.gr"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "click>=8.2.1",
    "pydantic-settings>=2.10.1",
    "pytz>=2025.2",
    "schedule>=1.2.2",
    "urllib3>=2.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]
